--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  filter: drop-shadow(10px 10px 10px black);
+  filter: drop-shadow(10px 10px 10px rgb(17, 17, 17));
 }
 h3 {
   color: goldenrod;
