--- a/style.css
+++ b/style.css
@@ -19,12 +19,10 @@ h3 {
   text-shadow: 4px 4px rgb(219, 127, 142) (255, 0, 85);
 }
 
-}
-
 h5 {
-  color: whitesmoke;
+  color: rgb(255, 0, 157);
   font-size: 80px;
   text-align: center;
-  background-color: rgb(13, 13, 218);
+  background-color: rgb(248, 182, 223);
   text-shadow: 6px 6px rgb(3, 94, 155) (255, 0, 85);
 }
