--- a/style.css
+++ b/style.css
@@ -5,10 +5,20 @@ h1 {
   background-color: rgb(245, 238, 180);
   text-shadow: 4px 4px rgb(219, 127, 142) (255, 0, 85);
 }
-img {
+#straw {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  filter: drop-shadow(10px 10px 10px rgb(17, 17, 17));
+}
+#star {
+  display: block;
+  margin-right: auto;
+  filter: drop-shadow(10px 10px 10px rgb(17, 17, 17));
+}
+#rainbow {
+  display: block;
+  margin-left: auto;
   filter: drop-shadow(10px 10px 10px rgb(17, 17, 17));
 }
 h3 {
@@ -25,4 +35,13 @@ h5 {
   text-align: center;
   background-color: rgb(248, 182, 223);
   text-shadow: 6px 6px rgb(3, 94, 155) (255, 0, 85);
+}
+
+p {
+  font-size: 20px;
+  font-family: cursive;
+}
+
+body {
+  color: gray;
 }
