--- a/style.css
+++ b/style.css
@@ -1,56 +1,100 @@
-h1 {
-  color: crimson;
-  font-size: 80px;
+html {
+  font-family: cursive;
+}
+
+body {
+  margin: 0;
+  background-color: #ffffff;
+}
+
+header h1 {
+  background-color: #fc3185;
+  color: white;
+  padding: 3rem 2rem;
+  font-size: 3rem;
   text-align: center;
-  background-color: rgb(245, 238, 180);
-  text-shadow: 4px 4px rgb(219, 127, 142) (255, 0, 85);
+  border-radius: 0.5rem;
 }
 
 h2 {
-  color: crimson;
-  font-size: 40px;
-  text-align: left;
-  background-color: rgb(247, 246, 244);
-}
-
-#glasas {
-  display: block;
+  font-size: 2.5rem;
+  width: 70%;
   margin-left: auto;
   margin-right: auto;
-  filter: drop-shadow(10px 10px 10px rgb(255, 147, 120));
-  filter: brightness(90%);
-}
-#choclat {
-  display: block;
-  margin-right: auto;
-  filter: opacity(80%);
-}
-#papelito {
-  display: block;
-  margin-left: auto;
-  filter: drop-shadow(10px 10px 10px rgb(209, 41, 201));
 }
 
-#verde {
-  display: block;
+h3 {
+  font-size: 2rem;
+  width: 70%;
   margin-left: auto;
   margin-right: auto;
-  filter: hue-rotate(60deg);
+  color: #f75f9e;
 }
 
-#blanc {
-  display: block;
-  margin-right: auto;
-  filter: blur(1px);
-}
-
-#sabor {
-  display: block;
+h4 {
+  font-size: 1.5rem;
+  width: 70%;
   margin-left: auto;
-  filter: saturate(3);
+  margin-right: auto;
 }
 
-p {
-  font-size: 20px;
-  font-family: cursive;
+h5 {
+  font-size: 1rem;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+body p {
+  transition: all 0.3s ease;
+  background-color: #fff;
+  margin: 1rem 0;
+  border-radius: 0.5rem;
+  padding: 1rem 1rem;
+  cursor: pointer;
+  border: 1px solid #ccc;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+body p:hover {
+  box-shadow: 0 0.1rem 0.4rem rgba(0, 0, 0, 0.3);
+}
+
+footer {
+  background-color: #222;
+  padding: 3rem;
+  color: white;
+  border-radius: 0.5rem;
+}
+
+footer p {
+  margin: 0;
+}
+
+footer a {
+  transition: color 0.3s ease;
+  color: white;
+  text-decoration: none;
+}
+
+footer a:hover {
+  color: cornflowerblue;
+}
+
+#trabajo {
+  display: block;
+  margin: auto;
+  filter: drop-shadow(20px 20px 20px rgb(255, 162, 250));
+}
+
+/* Go from zero to full opacity */
+@keyframes fadeEffect {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
