--- a/style.css
+++ b/style.css
@@ -1,100 +1,23 @@
-html {
-  font-family: cursive;
-}
-
 body {
-  margin: 0;
-  background-color: #ffffff;
+  background-color: lightblue;
 }
-
-header h1 {
-  background-color: #fc3185;
-  color: white;
-  padding: 3rem 2rem;
-  font-size: 3rem;
+h1 {
   text-align: center;
-  border-radius: 0.5rem;
+  font-size: 80px;
+  font-family: cursive;
+  color: rgb(24, 159, 238);
 }
-
 h2 {
-  font-size: 2.5rem;
-  width: 70%;
-  margin-left: auto;
-  margin-right: auto;
+  text-align: center;
+  font-size: 60px;
 }
-
-h3 {
-  font-size: 2rem;
-  width: 70%;
-  margin-left: auto;
-  margin-right: auto;
-  color: #f75f9e;
+p {
+  text-align: center;
+  font-size: 50px;
 }
-
-h4 {
-  font-size: 1.5rem;
-  width: 70%;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-h5 {
-  font-size: 1rem;
-  width: 70%;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-body p {
-  transition: all 0.3s ease;
-  background-color: #fff;
-  margin: 1rem 0;
-  border-radius: 0.5rem;
-  padding: 1rem 1rem;
-  cursor: pointer;
-  border: 1px solid #ccc;
-  width: 70%;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-body p:hover {
-  box-shadow: 0 0.1rem 0.4rem rgba(0, 0, 0, 0.3);
-}
-
-footer {
-  background-color: #222;
-  padding: 3rem;
-  color: white;
-  border-radius: 0.5rem;
-}
-
-footer p {
-  margin: 0;
-}
-
-footer a {
-  transition: color 0.3s ease;
-  color: white;
-  text-decoration: none;
-}
-
-footer a:hover {
-  color: cornflowerblue;
-}
-
-#trabajo {
+#nadis {
   display: block;
-  margin: auto;
-  filter: drop-shadow(20px 20px 20px rgb(255, 162, 250));
-}
-
-/* Go from zero to full opacity */
-@keyframes fadeEffect {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+  margin-left: auto;
+  margin-right: auto;
+  filter: drop-shadow(10px 10px 10px rgb(83, 172, 224));
 }
